Affichage nom champ fusion champ enfant tableau

--- a/application/views/scripts/formulaire/partials/partial-champ-nom-fusion.phtml
+++ b/application/views/scripts/formulaire/partials/partial-champ-nom-fusion.phtml
@@ -1,3 +1,25 @@
-<div class="span12 alert alert-info">
-    Nom du champ de fusion : {<?= $this->champFusionValue ?>}
-</div>
+<?php if (!is_array($this->champFusionValue)): ?>
+    <div class="span12 alert alert-info">
+        Nom du champ de fusion : {<?= $this->champFusionValue ?>}
+    </div>
+<?php else : ?>
+    <div class="span12 alert alert-info">
+        Champs de fusion :
+        <table class="table table-bordered table-condensed champFusionTable">
+            <tr>
+                <?php foreach ($this->champFusionValue['fieldNames'] as $fieldName): ?>
+                    <td>{<?= $fieldName ?>}</td>
+                <?php endforeach ?>
+            </tr>
+        </table>
+        [!-- BEGIN <?= $this->champFusionValue['loopName'] ?> --]
+        <table class="table table-bordered table-condensed champFusionTable">
+            <tr>
+                <?php foreach ($this->champFusionValue['fieldValues'] as $fieldValue): ?>
+                    <td>{<?= $fieldValue ?>}</td>
+                <?php endforeach ?>
+            </tr>
+        </table>
+        [!-- END <?= $this->champFusionValue['loopName'] ?> --]
+    </div>
+<?php endif ?>
