--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -42,7 +42,7 @@
     </div>
 
     <div class="span6 offset2 infos-champ">
-        <?php if (null !== $this->champFusionValue): ?>
+        <?php if (null !== $this->champFusionValue && !is_array($this->champFusionValue)): ?>
             <?= $this->partial(
                 'formulaire/partials/partial-champ-nom-fusion.phtml',
                 [
@@ -149,6 +149,15 @@ endif ?>
 
     <div id="saved-fields" class="span6 offset2">
         <?php if(count($this->listChamp) > 0): ?>
+            <?php if (null !== $this->champFusionValue && is_array($this->champFusionValue)): ?>
+                <?= $this->partial(
+                    'formulaire/partials/partial-champ-nom-fusion.phtml',
+                    [
+                        'champFusionValue' => $this->champFusionValue
+                    ]
+                ) ?>
+            <?php endif ?>
+
             <table class="table table-bordered table-condensed">
                 <thead>
                     <tr>
