--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -1134,37 +1134,35 @@
          $('.modifierAdresse').click(function (e) {
             e.preventDefault();
             $.ajax({
-                url: "/api/1.0/etablissement/get_adresse/?id="+$(this).attr('data-id'),
+                url: "/api/1.0/etablissement/get_adresse?id="+$(this).attr('data-id'),
                 type: "get",
                 success: function (reception) {
-                    console.log('Data', reception.response)
-                    console.log('Data', JSON.parse(reception.response))
-                    const data = JSON.parse(reception.response)
+                    const data = reception.response
 
-                    //commune_ac
-                    document.getElementsByName('commune_ac').value = data.LIBELLE_COMMUNE
+                    // Ville
+                    $("input[name='commune_ac']").val(data.LIBELLE_COMMUNE)
 
-                    //voie_ac
-                    document.getElementsByName('voie_ac').value = data.LIBELLE_RUE
+                    // Voie
+                    $("input[name='voie_ac']").removeAttr('disabled')
+                    $("input[name='voie_ac']").val(data.LIBELLE_RUE)
 
-                    //numero
-                    document.getElementsByName('numero').value = data.NUMERO_ADRESSE
+                    // Numéro
+                    $("input[name='numero']").removeAttr('disabled')
+                    $("input[name='numero']").val(data.NUMERO_ADRESSE)
 
-                    //complement
-                    document.getElementsByName('complement').value = data.COMPLEMENT_ADRESSE
+                    // Complément d'adresse
+                    $("input[name='complement']")
+                    $("input[name='complement']").val(data.COMPLEMENT_ADRESSE)
 
-                    //lon
-                    document.getElementsByName('lon').value = data.LON_ETABLISSEMENTADRESSE
+                    // Coordonnées
+                    $("input[name='lon']").val(data.LON_ETABLISSEMENTADRESSE)
+                    $("input[name='lat']").val(data.LAT_ETABLISSEMENTADRESSE)
 
-                    //lat
-                    document.getElementsByName('lat').value = data.LAT_ETABLISSEMENTADRESSE
+                    // Code INSEE
+                    $("input[name='code_insee']").val(data.NUMINSEE_COMMUNE)
 
-                    //code_insee
-                    document.getElementsByName('code_insee').value = data.NUMINSEE_COMMUNE
-
-                    //code_insee
-                    document.getElementsByName('code_postal').value = data.CODEPOSTAL_COMMUNE
-
+                    // Code Postal
+                    $("input[name='code_postal']").val(data.CODEPOSTAL_COMMUNE)
                 }
             });
          });
