bug passage parametre route api

--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -375,7 +375,7 @@
 
         <!-- Carte de l'emplacement de l'établissement / informations  -->
         <div class='span6'>
-            <h4 class="champ_adresse champs h4_subtitle">Adresse <a style='font-size: 0.85em; float: right; font-weight: normal;' data-toggle="modal" data-backdrop="false" href="#adresse-modal">Ajouter une adresse</a></h4>
+            <h4 class="champ_adresse champs h4_subtitle">Adresse <a style='font-size: 0.85em; float: right; font-weight: normal;' data-toggle="modal" data-backdrop="false" href="#adresse-modal-ajout">Ajouter une adresse</a></h4>
             <table id='adresses' class='table table-condensed champ_adresse champs'>
                 <thead>
                     <tr>
@@ -505,7 +505,7 @@
 </div>
 
 <!-- Boite de construction d'adresse-->
-<form id="adresse-modal" class="modal hide adresse fase" action='#' method='post'>
+<form id="adresse-modal-ajout" class="modal hide adresse fase" action='#' method='post'>
 
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -591,6 +591,10 @@
         <a href="#" data-dismiss="modal" class="btn btn-success" id='submit-adresse'>Sauvegarder</a>
     </div>
 </form>
+
+<?= $this->partial('etablissement/partials/partial-modal-edit-adresse.phtml') ?>
+
+
 
 <script type="text/javascript">
     $(document).ready(function() {
@@ -988,20 +992,20 @@
                 return item.LIBELLE_COMMUNE + " (" + item.NUMINSEE_COMMUNE + ")";
             }
         }).result(function(e, item) {
-            $("#adresse-modal input[name='code_insee']").val( item.NUMINSEE_COMMUNE );
-            $("#adresse-modal input[name='code_postal']").val( item.CODEPOSTAL_COMMUNE );
-            $("#adresse-modal input[name='voie_ac']").removeAttr('disabled');
+            $("#adresse-modal-ajout input[name='code_insee']").val( item.NUMINSEE_COMMUNE );
+            $("#adresse-modal-ajout input[name='code_postal']").val( item.CODEPOSTAL_COMMUNE );
+            $("#adresse-modal-ajout input[name='voie_ac']").removeAttr('disabled');
         }).click(function() {
             $(this).val("");
-            $("#adresse-modal input[name='voie_ac'], #adresse-modal input[name='numero'], #adresse-modal input[name='complement']").val("").attr("disabled", true).blur();
-            $("#adresse-modal input[name='voie']").val("").blur();
+            $("#adresse-modal-ajout input[name='voie_ac'], #adresse-modal-ajout input[name='numero'], #adresse-modal-ajout input[name='complement']").val("").attr("disabled", true).blur();
+            $("#adresse-modal-ajout input[name='voie']").val("").blur();
         });
 
         // Auto complétion de la rue
         $("input[name='voie_ac']").autocomplete('/api/1.0/adresse/get_voies', {
             minChars: 2,
             cacheLength: 0,
-            extraParams: { code_insee: function(){ return $("#adresse-modal input[name='code_insee']").val() } },
+            extraParams: { code_insee: function(){ return $("#adresse-modal-ajout input[name='code_insee']").val() } },
             parse: function(data) {
                 return $.map(data["response"], function(row) { return {data: row,value: row.LIBELLE_RUE,result: row.LIBELLE_RUE} });
             },
@@ -1009,29 +1013,29 @@
                 return item.LIBELLE_RUE + ' (code insee : ' + item.NUMINSEE_COMMUNE + ')';
             }
         }).result(function(e, item) {
-            $("#adresse-modal input[name='voie']").val( item.ID_RUE );
-            $("#adresse-modal input[name='type_voie']").val( item.ID_RUETYPE );
-            $("#adresse-modal input[name='numero'], #adresse-modal input[name='complement']").removeAttr("disabled");
+            $("#adresse-modal-ajout input[name='voie']").val( item.ID_RUE );
+            $("#adresse-modal-ajout input[name='type_voie']").val( item.ID_RUETYPE );
+            $("#adresse-modal-ajout input[name='numero'], #adresse-modal-ajout input[name='complement']").removeAttr("disabled");
         }).click(function() {
             $(this).val("");
-            $("#adresse-modal input[name='numero'], #adresse-modal input[name='complement']").val("").attr("disabled", true).blur();
+            $("#adresse-modal-ajout input[name='numero'], #adresse-modal-ajout input[name='complement']").val("").attr("disabled", true).blur();
         });
 
-        $('#adresse-modal').on('shown.bs.modal', function () {
-            if($('#adresse-modal .modal-body').scrollTop() !== 0) {
-                $('#adresse-modal .modal-body').scrollTop(0);
+        $('#adresse-modal-ajout').on('shown.bs.modal', function () {
+            if($('#adresse-modal-ajout .modal-body').scrollTop() !== 0) {
+                $('#adresse-modal-ajout .modal-body').scrollTop(0);
             }
 
-            $('#adresse-modal input').val('');
-            $("#adresse-modal input[name='voie_ac'], #adresse-modal input[name='numero'], #adresse-modal input[name='complement']").val("").attr("disabled", true).blur();
+            $('#adresse-modal-ajout input').val('');
+            $("#adresse-modal-ajout input[name='voie_ac'], #adresse-modal-ajout input[name='numero'], #adresse-modal-ajout input[name='complement']").val("").attr("disabled", true).blur();
             $("span.result").text("Inconnu");
             $('#geoportail-container').css('visibility', 'hidden');
 
             // Si une carto est déjà présente, on n'en charge pas une autre
             if($('#geoportail-container .ol-viewport').length == 0) {
                 // On empêche le clic sur la géolocalisation jusqu'à ce que la carto soit chargée
-                $('#adresse-modal #geolocme').attr('disabled', true);
-                $('#adresse-modal #geolocme_nominatim').attr('disabled', true);
+                $('#adresse-modal-ajout #geolocme').attr('disabled', true);
+                $('#adresse-modal-ajout #geolocme_nominatim').attr('disabled', true);
 
                 /***** Carte IGN *****/
                 <?php if ($this->key_ign != null): ?>
@@ -1065,8 +1069,8 @@
                         $('div[id^=GPtoolbox-measure-main-]').css('display', 'none');
                         $('.ol-rotate').css('display', 'none');
 
-                        $('#adresse-modal #geolocme').removeAttr('disabled');
-                        $('#adresse-modal #geolocme_nominatim').removeAttr('disabled');
+                        $('#adresse-modal-ajout #geolocme').removeAttr('disabled');
+                        $('#adresse-modal-ajout #geolocme_nominatim').removeAttr('disabled');
                     };
 
                     function onRotation () {
@@ -1078,7 +1082,7 @@
                         putMarkerAt(viewer.getLibMap(), lonlat, nbCouches);
                     });
 
-                    $('#adresse-modal #geolocme').click(function(e) {
+                    $('#adresse-modal-ajout #geolocme').click(function(e) {
                         e.preventDefault();
 
                         var adresse = "";
@@ -1163,6 +1167,9 @@
 
                     // Code Postal
                     $("input[name='code_postal']").val(data.CODEPOSTAL_COMMUNE)
+
+                    //Id de l'adrese
+                    $("input[name='idAdresse']").val(data.ID_ADRESSE)
                 }
             });
          });
@@ -1231,7 +1238,7 @@
                 }
             );
 
-            $('#adresse-modal #geolocme-geoconcept').click(function(e) {
+            $('#adresse-modal-ajout #geolocme-geoconcept').click(function(e) {
                 e.preventDefault();
                 var geocoderUrl = "<?php echo getenv('PREVARISC_PLUGIN_GEOCONCEPT_GEOCODER') ?>";
                 var adresse = "";
@@ -1271,7 +1278,7 @@
         <?php endif ?>
 
         // Géolocalisation de l'adresse
-        $('#adresse-modal #geolocme_nominatim').click(function() {
+        $('#adresse-modal-ajout #geolocme_nominatim').click(function() {
             element = $(this);
             $.ajax({
                 url: "//nominatim.openstreetmap.org/search",
